Unreleased
==========

0.3.0 (2019-08-01)
==================

- Add `ObjectPermissionsAssignmentMixin` serializer mixin, which facilitates the
  assigment of object permissions.
- Rename `DjangoObjectPermissionsFilter` to `ObjectPermissionsFilter`.

0.2.0 (2019-07-19)
==================

- Add Django 2.2 support
- Drop Django 1.1 & 2.1 support
- Drop Python 2.7 & 3.4 support

0.1.1 (2018-11-02)
==================

- Allow `get_objects_for_user` keyword arguments to be overridden.
- Ensure Python 3.7 compatibility

0.1.0 (2018-07-09)
==================

- Port initial implementation from Django REST Framework.