@@ -1,108 +1,0 @@
-version: 2.1
-
-aliases:
-  - &environ
-    run:
-      name: setup virtual environment
-      # The below ensures the venv is activated for every subsequent step
-      command: |
-        virtualenv venv
-        echo "source /home/circleci/project/venv/bin/activate" >> $BASH_ENV
-
-  - &install
-    run:
-      name: install dependencies
-      command: |
-        pip install -U pip setuptools wheel tox codecov
-
-  - &test-steps
-    steps:
-      - checkout
-      - *environ
-      - *install
-      - run: tox
-      - run: coverage report
-      - run: codecov
-
-jobs:
-  lint:
-    steps:
-      - checkout
-      - *environ
-      - *install
-      - run: tox -e isort,lint,readme
-    docker:
-      - image: circleci/python:3.7
-
-  dist:
-    steps:
-      - checkout
-      - *environ
-      - *install
-      - run: |
-          python setup.py bdist_wheel
-          tox -e dist --installpkg ./dist/djangorestframework_guardian-*.whl
-          tox -e dist
-    docker:
-      - image: circleci/python:3.7
-
-  test-py38:
-    <<: *test-steps
-    docker:
-      - image: circleci/python:3.8
-    environment:
-      TOXENV: py38
-
-  test-py37:
-    <<: *test-steps
-    docker:
-      - image: circleci/python:3.7
-    environment:
-      TOXENV: py37
-
-  test-py36:
-    <<: *test-steps
-    docker:
-      - image: circleci/python:3.6
-    environment:
-      TOXENV: py36
-
-  test-py35:
-    <<: *test-steps
-    docker:
-      - image: circleci/python:3.5
-    environment:
-      TOXENV: py35
-
-
-workflows:
-  version: 2
-  commit: &test-workflow
-    jobs:
-      - lint
-      - dist:
-          requires:
-            - lint
-
-      - test-py37:
-          requires:
-            - lint
-
-      - test-py36:
-          requires:
-            - lint
-
-      - test-py35:
-          requires:
-            - lint
-
-  weekly:
-    <<: *test-workflow
-    triggers:
-      - schedule:
-          # 8/9 AM PST/PDT every Monday
-          cron: "0 16 * * 1"
-          filters:
-            branches:
-              only:
-                - master
