@@ -1,4 +1,0 @@
-from setuptools import setup
-
-
-setup()
