@@ -1,43 +1,43 @@
 [tox]
 envlist =
-       {py35,py36,py37}-django21,
-       {py35,py36,py37,py38}-django22,
-       {py36,py37,py38}-django30,
-       dist,isort,lint,readme
+    py310-django{42,50,51,52},
+    py311-django{42,50,51,52},
+    py312-django{42,50,51,52},
+    py313-django{51,52},
+    dist,lint
 
 [testenv]
 commands = coverage run manage.py test {posargs: --no-input -v 2}
 usedevelop = True
-envdir={toxworkdir}/v/{envname}
 setenv =
     PYTHONDONTWRITEBYTECODE = 1
 deps =
-    coverage
-    django21: Django~=2.1
-    django22: Django~=2.2
-    django30: Django~=3.0
+    coverage[toml]
+    django42: Django~=4.2.0
+    django50: Django~=5.0.0
+    django51: Django~=5.1.0
+    django52: Django~=5.2.0
 
 [testenv:dist]
-commands = python manage.py test {posargs: --no-input -v 2}
+commands =
+    python manage.py test {posargs: --no-input -v 2}
+    python -m build
+    twine check dist/*
 usedevelop = False
-
-[testenv:isort]
-commands = isort --check-only --recursive src tests {posargs:--diff}
+setenv =
+    PYTHONDONTWRITEBYTECODE =
 deps =
-    isort
+    build
+    twine
 
 [testenv:lint]
-commands = flake8 src tests {posargs}
+commands =
+    isort src tests --check-only --diff
+    flake8 src tests
 deps =
+    isort
     flake8
+    flake8-pyproject
     flake8-bugbear
     flake8-commas
     flake8-quotes
-
-[testenv:readme]
-commands =
-    python setup.py sdist bdist_wheel
-    twine check dist/*
-usedevelop = False
-deps =
-    twine
